# document-insight

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  questions.txt  todo.txt
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/.github/: pull_request_templates.md
backend/app/: main.py
backend/app/core/: settings.py
backend/app/db/: init.py  models.py  session.py
backend/app/db/repos/: documents.py  users.py
backend/app/routers/: auth.py  documents.py  entities.py  jobs.py  qa.py  retrieval.py  upload.py
backend/app/schemas/: auth.py  documents.py  entities.py  extraction.py  jobs.py  qa.py  retrieval.py
backend/app/services/: auth_service.py  current_user.py  document_service.py  embedding_cache.py  embedding_service.py  extraction_service.py  faiss_service.py  job_store.py  language_service.py  ner_service.py  ocr_service.py  qa_service.py  retrieval_service.py
backend/tests/: test_async_jobs.py  test_auth.py  test_cors.py  test_db_init.py  test_document_library.py  test_embedding_cache.py  test_entities.py  test_extraction.py  test_ocr_fallback.py  test_qa.py  test_qa_model_preset.py  test_retrieval.py  test_retrieval_api.py  test_upload.py
docs/: INSTRUCTIONS.md  header.txt
docs/pr-assets/ci/: ci.yml.txt
docs/pr-assets/cleanup/: pytest.txt
docs/pr-assets/docker/: dev-compose.txt  docker-compose.txt
docs/pr-assets/enhancement-a/: pytest.txt
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
(+12 files in other folders)
