[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt<4",
    "easyocr>=1.7.2",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "langdetect>=1.0.9",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.0",
    "protobuf>=6.33.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
